--- a/index.html
+++ b/index.html
@@ -108,7 +108,13 @@
         .required {
             color: red;
         }
+
+        #g-signin2 {
+            margin-bottom: 10px;
+        }
     </style>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="133015966061-ernp3gppbut5raboju94gts04iee2702" content="133015966061-ernp3gppbut5raboju94gts04iee2702.apps.googleusercontent.com">
 </head>
 <body>
     <div class="form-overlay" id="form-overlay">
@@ -117,6 +123,10 @@
                 <div class="logo-container">
                     <img src="https://i.imgur.com/9mOm7gP.png" alt="Logo">
                 </div>
+
+                <div id="g-signin2"></div>
+                <input type="hidden" id="googleId" name="googleId">
+
                 <label for="firstName">First Name <span class="required">*</span></label>
                 <input type="text" id="firstName" name="firstName" required>
 
@@ -154,6 +164,54 @@
     </div>
 
     <script>
+        function onSuccess(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            document.getElementById('firstName').value = profile.getGivenName();
+            document.getElementById('lastName').value = profile.getFamilyName();
+            document.getElementById('email').value = profile.getEmail();
+            document.getElementById('googleId').value = profile.getId();
+        }
+
+        function onFailure(error) {
+            console.log(error);
+        }
+
+        function renderButton() {
+            gapi.signin2.render('g-signin2', {
+                'scope': 'profile email',
+                'width': 240,
+                'height': 50,
+                'longtitle': true,
+                'theme': 'dark',
+                'onsuccess': onSuccess,
+                'onfailure': onFailure
+            });
+        }
+
+        function formatPhoneNumber() {
+            let input = document.getElementById('phoneNumber');
+            let number = input.value.replace(/\D/g, ''); // Remove non-digit characters
+
+            // List of recognized country codes
+            const countryCodes = ['1', '33', '971', '44', '63', '65', '34'];
+
+            // Function to check if the number starts with any of the recognized country codes
+            function startsWithCode(num) {
+                return countryCodes.some(code => num.startsWith(code));
+            }
+
+            if (number.length === 10 && !startsWithCode(number)) {
+                // If number is 10 digits and does not start with a recognized code, assume it's Indian
+                input.value = '+91' + number;
+            } else if (startsWithCode(number)) {
+                // If it starts with a recognized country code, just add +
+                input.value = '+' + number;
+            } else {
+                // If none of the above, set the number as is but ensure it starts with +
+                input.value = '+' + number;
+            }
+        }
+
         const formOverlay = document.getElementById('form-overlay');
         const closeButton = document.getElementById('close-button');
         const submitButton = document.querySelector('button[type=submit]');
@@ -195,29 +253,9 @@
             });
         });
 
-        function formatPhoneNumber() {
-            let input = document.getElementById('phoneNumber');
-            let number = input.value.replace(/\D/g, ''); // Remove non-digit characters
-
-            // List of recognized country codes
-            const countryCodes = ['1', '33', '971', '44', '63', '65', '34'];
-
-            // Function to check if the number starts with any of the recognized country codes
-            function startsWithCode(num) {
-                return countryCodes.some(code => num.startsWith(code));
-            }
-
-            if (number.length === 10 && !startsWithCode(number)) {
-                // If number is 10 digits and does not start with a recognized code, assume it's Indian
-                input.value = '+91' + number;
-            } else if (startsWithCode(number)) {
-                // If it starts with a recognized country code, just add +
-                input.value = '+' + number;
-            } else {
-                // If none of the above, set the number as is but ensure it starts with +
-                input.value = '+' + number;
-            }
-        }
+        gapi.load('auth2', function() {
+            gapi.auth2.init().then(renderButton);
+        });
     </script>
 </body>
 </html>
