--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <input type="email" id="email" name="email" required>
 
                 <label for="phoneNumber">Phone Number <span class="required">*</span></label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" required placeholder="+91XXXXXXXXXX" oninput="formatPhoneNumber()">
+                <input type="tel" id="phoneNumber" name="phoneNumber" required value="+91" placeholder="+91XXXXXXXXXX" oninput="formatPhoneNumber()">
 
                 <label for="time">What is your preferred time to connect?<span class="required">*</span></label>
                 <select id="time" name="time" required>
@@ -218,6 +218,14 @@
                 input.value = '+' + number;
             }
         }
+
+        // Set default value for phone number input
+        document.addEventListener('DOMContentLoaded', (event) => {
+            let phoneNumberInput = document.getElementById('phoneNumber');
+            if (!phoneNumberInput.value) {
+                phoneNumberInput.value = '+91';
+            }
+        });
     </script>
 </body>
 </html>
