--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book a Trial</title>
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.12/css/intlTelInput.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <style>
         :root {
             --primary-color: #1c90ff;
@@ -24,7 +24,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: transparent; /* Transparent background */
+            background-color: transparent;
             z-index: 1000;
         }
         .form-container {
@@ -39,9 +39,6 @@
             height: auto;
             display: block;
             margin: 10px auto;
-            margin-bottom: 10px;
-            margin-top: 0px;
-            align-items: right;
         }
         #lead-form {
             padding: 10px;
@@ -50,7 +47,6 @@
             margin-bottom: 8px;
             font-weight: 500;
             font-size: 12px;
-            font-family: 'Play', sans-serif;
         }
         #lead-form input[type="text"], #lead-form input[type="email"], #lead-form input[type="tel"], #lead-form select {
             width: calc(100% - 10px);
@@ -59,31 +55,38 @@
             border: 1px solid var(--input-border);
             border-radius: 5px;
             box-sizing: border-box;
-            font-family: 'Play', sans-serif;
+            font-size: 12px;
+        }
+        #phone-container {
+            display: flex;
+        }
+        #phone-container input[type="tel"] {
+            flex: 1;
+        }
+        #phone-container .country-code {
+            width: 60px;
+            padding: 10px;
+            border: 1px solid var(--input-border);
+            border-radius: 5px 0 0 5px;
+            box-sizing: border-box;
             font-size: 12px;
         }
         #button-container {
             display: flex;
             justify-content: space-between;
             margin-top: 25px;
-            margin-bottom: 5px;
-            width: calc(100% - 10px);
         }
-
         button {
             width: 48%;
             padding: 10px;
             border-radius: 4px;
             cursor: pointer;
             font-size: 12px;
-            font-family: 'Play', sans-serif;
         }
         button.submit {
             background-color: var(--primary-color);
             color: white;
             border: none;
-            font-size: 12px;
-            font-family: 'Play', sans-serif;
         }
         button.submit:hover {
             background-color: var(--hover-color);
@@ -92,25 +95,12 @@
             background-color: #888;
             color: white;
             border: none;
-            font-size: 12px;
-            font-family: 'Play', sans-serif;
         }
         button.close:hover {
             background-color: #666;
         }
-        small {
-            display: block;
-            font-size: 8px;
-            color: #666;
-            margin-top: -5px;
-            margin-bottom: 5px;
-        }
-
         .required {
             color: red;
-        }
-        .iti {
-            width: 100%;
         }
     </style>
 </head>
@@ -131,7 +121,10 @@
                 <input type="email" id="email" name="email" required>
 
                 <label for="phoneNumber">Phone Number <span class="required">*</span></label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                <div id="phone-container">
+                    <input type="tel" id="countryCode" name="countryCode" class="country-code" value="+91" required>
+                    <input type="tel" id="phoneNumber" name="phoneNumber" required placeholder="XXXXXXXXXX">
+                </div>
 
                 <label for="time">What is your preferred time to connect?<span class="required">*</span></label>
                 <select id="time" name="time" required>
@@ -157,7 +150,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.12/js/intlTelInput.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
     <script>
         const formOverlay = document.getElementById('form-overlay');
         const closeButton = document.getElementById('close-button');
@@ -168,16 +161,34 @@
             formOverlay.style.display = 'none';
         });
 
+        const phoneInput = document.querySelector('#phoneNumber');
+        phoneInput.addEventListener('input', () => {
+            phoneInput.value = phoneInput.value.replace(/[^\d]/g, ''); // Remove non-digit characters
+        });
+
         document.getElementById('lead-form').addEventListener('submit', function(event) {
             event.preventDefault();
             submitButton.disabled = true;
             submitButton.innerText = 'Submitting...';
 
+            const countryCode = document.getElementById('countryCode').value;
+            const phoneNumber = document.getElementById('phoneNumber').value;
+            const fullPhoneNumber = countryCode + phoneNumber;
+
+            // Validate phone number length and content
+            if (phoneNumber.length < 10 || phoneNumber.length > 15) {
+                alert('Please enter a valid phone number.');
+                submitButton.disabled = false;
+                submitButton.innerText = 'Submit';
+                return;
+            }
+
             const formData = new FormData(this);
             const data = {
                 token: "DOjMVL37Q5",
                 sourceId: "8080",
-                ...Object.fromEntries(formData)
+                ...Object.fromEntries(formData),
+                fullPhoneNumber: fullPhoneNumber
             };
 
             fetch('https://api.momence.com/integrations/customer-leads/13752/collect', {
@@ -195,28 +206,22 @@
             }).catch((error) => {
                 console.error('Error:', error);
                 alert(error.message);
-                submitButton.disabled = false; // Re-enable the button if there's an error
+                submitButton.disabled = false;
                 submitButton.innerText = 'Submit';
             });
         });
 
-        // Initialize intl-tel-input
-        const phoneInputField = document.getElementById('phoneNumber');
-        const phoneInput = window.intlTelInput(phoneInputField, {
-            initialCountry: "in", // Set initial country to India
-            utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.12/js/utils.js"
-        });
+        // OTP Validation
+        // This part usually requires backend integration with an SMS provider
+        function sendOTP(phoneNumber) {
+            // Code to send OTP using an SMS service provider
+            // This should trigger an API call to send the OTP to the user's phone number
+        }
 
-        // Add validation to the phone number field
-        document.getElementById('lead-form').addEventListener('submit', function(event) {
-            if (!phoneInput.isValidNumber()) {
-                event.preventDefault();
-                alert('Please enter a valid phone number.');
-                submitButton.disabled = false; // Re-enable the button if validation fails
-                submitButton.innerText = 'Submit';
-                return;
-            }
-        });
+        function validateOTP(otp) {
+            // Code to validate OTP
+            // This should trigger an API call to validate the OTP entered by the user
+        }
     </script>
 </body>
 </html>
