--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book a Trial</title>
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/css/intlTelInput.css">
     <style>
         :root {
             --primary-color: #1c90ff;
@@ -24,7 +23,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: transparent;
+            background-color: transparent; /* Transparent background */
             z-index: 1000;
         }
         .form-container {
@@ -39,6 +38,9 @@
             height: auto;
             display: block;
             margin: 10px auto;
+            margin-bottom: 10px;
+            margin-top: 0px;
+            align-items: right;
         }
         #lead-form {
             padding: 10px;
@@ -47,6 +49,7 @@
             margin-bottom: 8px;
             font-weight: 500;
             font-size: 12px;
+            font-family: 'Play', sans-serif;
         }
         #lead-form input[type="text"], #lead-form input[type="email"], #lead-form input[type="tel"], #lead-form select {
             width: calc(100% - 10px);
@@ -55,38 +58,31 @@
             border: 1px solid var(--input-border);
             border-radius: 5px;
             box-sizing: border-box;
-            font-size: 12px;
-        }
-        #phone-container {
-            display: flex;
-        }
-        #phone-container input[type="tel"] {
-            flex: 1;
-        }
-        #phone-container .country-code {
-            width: 60px;
-            padding: 10px;
-            border: 1px solid var(--input-border);
-            border-radius: 5px 0 0 5px;
-            box-sizing: border-box;
+            font-family: 'Play', sans-serif;
             font-size: 12px;
         }
         #button-container {
             display: flex;
             justify-content: space-between;
             margin-top: 25px;
+            margin-bottom: 5px;
+            width: calc(100% - 10px);
         }
+
         button {
             width: 48%;
             padding: 10px;
             border-radius: 4px;
             cursor: pointer;
             font-size: 12px;
+            font-family: 'Play', sans-serif;
         }
         button.submit {
             background-color: var(--primary-color);
             color: white;
             border: none;
+            font-size: 12px;
+            font-family: 'Play', sans-serif;
         }
         button.submit:hover {
             background-color: var(--hover-color);
@@ -95,10 +91,20 @@
             background-color: #888;
             color: white;
             border: none;
+            font-size: 12px;
+            font-family: 'Play', sans-serif;
         }
         button.close:hover {
             background-color: #666;
         }
+        small {
+            display: block;
+            font-size: 8px;
+            color: #666;
+            margin-top: -5px;
+            margin-bottom: 5px;
+        }
+
         .required {
             color: red;
         }
@@ -121,7 +127,7 @@
                 <input type="email" id="email" name="email" required>
 
                 <label for="phoneNumber">Phone Number <span class="required">*</span></label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                <input type="tel" id="phoneNumber" name="phoneNumber" required placeholder="+91XXXXXXXXXX" oninput="formatPhoneNumber()">
 
                 <label for="time">What is your preferred time to connect?<span class="required">*</span></label>
                 <select id="time" name="time" required>
@@ -147,8 +153,6 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/js/intlTelInput.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/js/utils.js"></script>
     <script>
         const formOverlay = document.getElementById('form-overlay');
         const closeButton = document.getElementById('close-button');
@@ -191,28 +195,29 @@
             });
         });
 
-        // Initialize intl-tel-input
-        const phoneInputField = document.querySelector("#phoneNumber");
-        const phoneInput = window.intlTelInput(phoneInputField, {
-            initialCountry: "auto",
-            geoIpLookup: function(success, failure) {
-                fetch("https://ipinfo.io?token=f4dffabf7dfb93")
-                    .then(response => response.json())
-                    .then(data => success(data.country))
-                    .catch(() => success("us"));
-            },
-            utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/js/utils.js"
-        });
+        function formatPhoneNumber() {
+            let input = document.getElementById('phoneNumber');
+            let number = input.value.replace(/\D/g, ''); // Remove non-digit characters
 
-        // Validate phone number on submit
-        document.getElementById("lead-form").addEventListener("submit", function(event) {
-            if (!phoneInput.isValidNumber()) {
-                event.preventDefault();
-                alert("Invalid phone number");
-                submitButton.disabled = false;
-                submitButton.innerText = 'Submit';
+            // List of recognized country codes
+            const countryCodes = ['1', '33', '971', '44', '63', '65', '34'];
+
+            // Function to check if the number starts with any of the recognized country codes
+            function startsWithCode(num) {
+                return countryCodes.some(code => num.startsWith(code));
             }
-        });
+
+            if (number.length === 10 && !startsWithCode(number)) {
+                // If number is 10 digits and does not start with a recognized code, assume it's Indian
+                input.value = '+91' + number;
+            } else if (startsWithCode(number)) {
+                // If it starts with a recognized country code, just add +
+                input.value = '+' + number;
+            } else {
+                // If none of the above, set the number as is but ensure it starts with +
+                input.value = '+' + number;
+            }
+        }
     </script>
 </body>
 </html>
