--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             const formData = new FormData(this);
             const data = Object.fromEntries(formData);
 
-            fetch('YOUR_WEB_APP_URL', {  // Replace with your Google Apps Script Web App URL
+            fetch('https://script.google.com/macros/s/AKfycbyIUqf0HnSd06NTsHZLyb2tyY7R0xOm2DVtwhNJHwtlpxvWmMQze8-RHUSpGXsYydKO/exec', {  // Replace with your Google Apps Script Web App URL
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
